# opal-v2

./: .gitignore  README.md  create_dataset.py  dan_analysis.py  draft.py  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
app/: 4k.ckpt  7k.ckpt  app.py  map_metadata.csv  player_metadata.csv  utils.py
app/components/: bound_metrics.py  confidence.py  delta_to_acc.py  embeddings.py  global_prediction.py  leaderboard.py  map_embeddings.py  player_embeddings.py  polar_embeddings.py  prediction_error.py  rank.py  rating.py  select.py  support.py  uncertainty.py
app/pages/: info.py
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
model/: model.py
opal/: __main__.py  create_dataset.py  create_model.py  dan_analysis.py  data.py  dict_transformer.py  embedding_analysis.py  main.py  testss.py  utils.py
opal/data/: data.py
opal/evaluate/: evaluate.py
opal/model/: bezier.py  delta_model.py  exp_linear.py  positive_linear.py
