[tool.poetry]
name = "opal"
version = "0.1.0"
description = ""
authors = ["Eve-ning <dev_evening@hotmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
sqlalchemy = "^2.0.31"

torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
lightning = "^2.3.3"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
streamlit = "^1.37.0"
plotly = "^5.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
