[tool.poetry]
name = "opal"
version = "0.1.0"
description = ""
authors = ["Eve-ning <dev_evening@hotmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
sqlalchemy = "^2.0.31"

lightning = "^2.3.3"
networkx = "^3.3"
firebase-admin = "^6.5.0"
torch = {version = "^2.4.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.4.0+cpu", source = "pytorch_cpu"}

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
streamlit = "^1.37.0"
plotly = "^5.23.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
